[project]
name = "loan-application"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ofure004", email = "ofure.ehiremhen@stu.cu.edu.ng" }
]
dependencies = [
    "tabulate>=0.9.0",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "plotext>=5.2.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"loan-application" = "loan_application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loan_application"]
